mostra o numero dos caracteres digitados na tela

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 <body>
     <div class="app">
         <div class="contain">
+            <h1>contador <br> de Caracteres</h1>
+
             <input class="input" type="text"  />
             <div class="wapper">
-                <p class="contador" >Contador de caracter</p>
+                
+                <p class="contador" >Caracteres digitados</p>
                 <p class="numbers">
-                    
+                    0
                 </p>
             </div>
         </div>
